--- a/demo/canary.yaml
+++ b/demo/canary.yaml
@@ -1,7 +1,7 @@
 apiVersion: flagger.app/v1alpha1
 kind: Canary
 metadata:
-  name: podinfo
+  name: demo
   namespace: demo
 spec:
   # deployment reference
