--- a/kubecon/hpa.yaml
+++ b/kubecon/hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: demo
-  namespace: demo
+  name: podinfo
+  namespace: podinfo
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: demo
+    name: podinfo
   minReplicas: 2
   maxReplicas: 4
   metrics:
