--- a/kubecon/canary.yaml
+++ b/kubecon/canary.yaml
@@ -2,7 +2,7 @@ apiVersion: flagger.app/v1alpha1
 kind: Canary
 metadata:
   name: podinfo
-  namespace: podinfo
+  namespace: kubecon
 spec:
   # deployment reference
   targetRef:
