--- a/kubecon/deployment.yaml
+++ b/kubecon/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: podinfo
-  namespace: podinfo
+  namespace: kubecon
   labels:
     app: podinfo
 spec:
