--- a/kubecon/hpa.yaml
+++ b/kubecon/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: podinfo
-  namespace: podinfo
+  namespace: kubecon
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
