--- a/kubecon/deployment.yaml
+++ b/kubecon/deployment.yaml
@@ -2,10 +2,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: podinfo
+  name: podinfo2
   namespace: kubecon
   labels:
-    app: podinfo
+    app: podinfo2
 spec:
   strategy:
     rollingUpdate:
@@ -13,13 +13,13 @@ spec:
     type: RollingUpdate
   selector:
     matchLabels:
-      app: podinfo
+      app: podinfo2
   template:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
       labels:
-        app: podinfo
+        app: podinfo2
     spec:
       containers:
       - name: podinfod
