--- a/kubecon/hpa.yaml
+++ b/kubecon/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: podinfo
+  name: podinfo2
   namespace: kubecon
 spec:
   scaleTargetRef:
