--- a/kubecon/hpa.yaml
+++ b/kubecon/hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: podinfo
+    name: podinfo2
   minReplicas: 2
   maxReplicas: 4
   metrics:
